# Dockerized-Stock-Data-Pipeline

./: Dockerfile  README.md  README_COMBINED.md  README_DOCKER.md  dagster_pipeline.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: Config.py  DatabaseManager.py  StockDataFetcher.py  __init__.py  main.py
dagster-job/: dagster_pipeline.py
init_db/: init.sql
