[project]
name = "stock-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.11.7",
    "dagster-dg-cli>=1.11.7",
    "dagster-webserver>=1.11.7",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "yfinance>=0.2.65",
]
